Fix OII logos on mobile, according to OII guidelines

--- a/src/main.styl
+++ b/src/main.styl
@@ -71,25 +71,44 @@ select
     
     @media (max-width: $mobile-width)
       flex-wrap: wrap
+      padding: 1em
+      padding-bottom: 0
+    
+    a
+      display: block
+    
+    .desktop-only
+      display: block
+      
+      @media (max-width: $mobile-width)
+        display: none
+    
+    .mobile-only
+      display: none
+      
+      @media (max-width: $mobile-width)
+        display: block
     
     a.logo
-      display: block
       flex: 0 0 auto
-      margin: 0.5em
+      margin: 0.2em
       
       img
         display: block
         width: 110px
         
         @media (max-width: $mobile-width)
-          width: 32px
+          width: 60px
       
     a.title
-      display: block
       flex: 1 1 auto
       margin: 0.5em
       color: $oxford-blue
       display: block
+      
+      @media (max-width: $mobile-width)
+        width: 100%
+        text-align: center
   
     h1
       font-size: 1.25em
@@ -99,7 +118,10 @@ select
       
       @media (max-width: $mobile-width)
         line-height: 24px
-        font-size: 0.8em
+        font-size: 1.25em
+    
+    .filler
+      flex: 1 1 auto
   
   nav
     background: $oxford-blue
